--- a/impls/rust/Cargo.toml
+++ b/impls/rust/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members=["common", "step0_repl" , "step1_read_print"]
+members=["common", "step0_repl" , "step1_read_print", "step2_eval"]
 resolver="3"
